--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
         <div class="maindiv">
             <h1>Simple Interest Calculator</h1>
             <!-- Sinple Interest Form Start -->
-            <div class="calculator-section">
-                <div>
-                    <b>Amount</b>
-                </div>
-                <div>
-                    <input type="number"  id="principal">
-                </div>
-            </div>
+            <table class='calculator-form-table'>
+                <tbody>
+                    <tr>
+                        <td>Amount</td>
+                        <td><input type="number"  id="principal"></td>
+                    </tr>
+                </tbody>
+            </table>
+            
             <div class="calculator-section">
                 <div>
                     <b>Rate</b>
