--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     </tr>
                     <tr>
                         <td>Rate</td>
-                        <td><input type="range" step="0.25" onchange="updateRate()"  id="rate" min="1" max="20" value="10.25"> <span id="rate_val">10.25%</span></td>
+                        <td class='flex-display'><input type="range" step="0.25" onchange="updateRate()"  id="rate" min="1" max="20" value="10.25"> <span id="rate_val">10.25%</span></td>
                     </tr>
                     <tr>
                         <td>No. of Years</td>
