--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                     <tr>
                         <td colspan='2'><button onclick="compute()">Compute Interest</button></td>
                     </tr>
+                    <tr>
+                        <td colspan='2'>
+                            <!-- Result to be shown here -->
+                            <span id="result"></span>
+                        </td>
+                    </tr>
                 </tbody>
             </table>
-            
-            <div class="result-section">
-                <!-- Result to be shown here -->
-                <span id="result"></span>
-            </div>
-
             <footer>&#169; Everyone Can Get Rich</footer>
         </div>
     </body>
